# mnist-practice

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
mnist/: model.py  train.py  training.py
notebooks/: data_inspection.ipynb  train.ipynb
